# RaceLens

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
data/processed/: cleaned_data.parquet  data_validation_summary.json
data/raw/: dataset_test_csv.csv:Zone.Identifier
notebooks/: 01_data_exploration.ipynb
notebooks/eda/: 01_races_eda.ipynb
notebooks/past_performance/: logistic_analysis_1.ipynb  logistic_analysis_2.ipynb  xgboost_logistic_analysis_3.ipynb
reports/: final_report.md
src/: cleaning.py  data_cleaning.ipynb
tests/: test_performance.py
